@@ -8,10 +8,10 @@
 	<packaging>jar</packaging>
 
 	<licenses>
-    	<license>
-        	<name>GNU General Public License v2.0 only</name>
-        	<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
-    	</license>
+		<license>
+			<name>GNU General Public License v2.0 only</name>
+			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
+		</license>
 	</licenses>
 
 	<dependencies>
@@ -20,8 +20,6 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -32,26 +30,23 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
 		</dependency>
-
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.blackducksoftware.tools</groupId>
 			<artifactId>cf-7x-connector</artifactId>
 			<version>1.4.12</version>
 		</dependency>
-		
-	    <dependency>
-		<!--  This helps avoid a conflict over different xerces library versions used at runtime -->
-    		<groupId>xerces</groupId>
-    		<artifactId>xercesImpl</artifactId>
-    	<version>2.11.0</version>
+		<dependency>
+			<!-- This helps avoid a conflict over different xerces library versions 
+				used at runtime -->
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.11.0</version>
 		</dependency>
-	     
 	</dependencies>
 
 	<build>
@@ -75,12 +70,10 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>appassembler-maven-plugin</artifactId>
 				<version>1.3.1</version>
-
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -97,7 +90,6 @@
 					<binFileExtensions>
 						<unix>.sh</unix>
 					</binFileExtensions>
-
 					<assembleDirectory>${project.build.directory}/deploy</assembleDirectory>
 					<repositoryLayout>flat</repositoryLayout>
 					<repositoryName>lib</repositoryName>
@@ -142,7 +134,6 @@
 						</program>
 					</programs>
 					<extraJvmArguments>-Xmx1024m -Xms1024M</extraJvmArguments>
-
 					<configurationDirectory>./properties</configurationDirectory>
 					<configurationSourceDirectory>${project.basedir}/src/main/resources</configurationSourceDirectory>
 					<copyConfigurationDirectory>true</copyConfigurationDirectory>
@@ -187,7 +178,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -196,7 +186,6 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -210,27 +199,36 @@
 					</archive>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.15</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>2.12</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<argLine>-XX:MaxPermSize=128m -Xms64m -Xmx256m</argLine>
-					<includes>
-						<include>**/*Test.class</include>
-					</includes>
-
-				</configuration>
+				<version>2.19.1</version>
 			</plugin>
-
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.6.201602180812</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.1.0</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -286,9 +284,8 @@
 			<url>https://updates.suite.blackducksoftware.com/integrations</url>
 		</repository>
 	</repositories>
-	
-	<!-- Install archives into Black Duck repo -->
 
+	<!-- Install archives into Black Duck repo -->
 	<distributionManagement>
 		<repository>
 			<id>bds-int-public</id>
